# statsproj

./: README.md
LatexFiles/: MTwriteup_karthik.tex
midterm_report/: refs.bib  writeup.tex
src/: AnnotationReader.cpp  AnnotationReader.h  CMakeLists.txt  testAnnotationReader.cpp
src/HOG_linux/: #Makefile#  Makefile  Makefile~  README
src/HOG_linux/include/: hog_extractor.h  hog_wrappers.h  image.h  integral_histogram.h
src/HOG_linux/src/: hog.cpp  hog.cpp~  hog_extractor.cpp  hog_wrappers.cpp  integral_histogram.cpp
